<resources>
    <string name="app_name">مانیتو</string>
    <string name="cash">باقی مانده</string>
    <string name="income">درآمد</string>
    <string name="expence">مخارج</string>
    <string name="toman">تومان</string>
    <string name="add_transaction">اضافه کردن تراکنش جدید</string>
    <string name="ok">باشه</string>
    <string name="cancel">بیخیال</string>
    <string name="today">امروز</string>
    <string name="date_hint">تاریخ</string>
    <string name="note_hint">یادداشت</string>
    <string name="note_input_hint">یادداشتی بنویسید</string>
    <string name="amount_hint">مبلغ</string>
    <string name="empty_field_error">مبلغ نباید خالی باشد</string>
    <string name="category">دسته‌بندی</string>
    <string name="details">جزیات</string>
    <string name="chart">نمودار</string>
    <string name="categories">دسته‌بندی ها</string>
    <string name="no_note">یادداشتی وجود ندارد</string>
    <string name="no_transaction">تراکنشی وجود ندارد</string>
    <string name="save_transaction">ذخیره</string>
    <string name="delete">حذف</string>
    <string name="edit">ویرایش</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="decimal">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">×</string>
    <string name="division">÷</string>
</resources>