<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_500"
    android:layoutDirection="rtl"
    tools:context=".ui.activities.TransactionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/app_bar_background"
        android:layoutDirection="ltr"
        android:minHeight="?attr/actionBarSize"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:text="۲۰۰۰۰۰۰۰" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/resultTextView"
                android:layout_alignStart="@id/resultTextView"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="۲۰×۱۰۰۰" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="86dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/more" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingTop="56dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layoutDirection="ltr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBtn"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/twoBtn"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/threeBtn"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/three"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/divisionBtn"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/division"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBtn"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/four"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/fiveBtn"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/five"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/sixBtn"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/multiplicationBtn"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/multiplication"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <Button
                android:id="@+id/sevenBtn"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/seven"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/eightBtn"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/eight"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/nineBtn"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/nine"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/minusBtn"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/minus"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/decimalBtn"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/decimal"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/zeroBtn"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <ImageButton
                android:id="@+id/deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@color/primaryColor"
                app:srcCompat="@android:drawable/ic_input_delete" />

            <Button
                android:id="@+id/plusBtn"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@color/primaryColor" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>