<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_transaction"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountDialogEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/amount_hint"
        android:textColorHint="@color/grey_500"
        app:boxStrokeColor="@color/grey_500"
        app:hintTextColor="@color/secondaryColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amountDialogEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noteDialogEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/note_hint"
        android:textColorHint="@color/grey_500"
        app:boxStrokeColor="@color/grey_500"
        app:hintTextColor="@color/secondaryColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noteDialogEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/saveTransactionButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="end"
            android:text="@string/save_transaction"
            android:textColor="@color/secondaryColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:rippleColor="@android:color/transparent" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layoutDirection="rtl">

            <com.google.android.material.chip.Chip
                android:id="@+id/dateChip"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layoutDirection="ltr"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:chipBackgroundColor="@color/grey_100"
                app:chipIcon="@drawable/ic_calendar"
                app:chipStartPadding="6dp"
                app:rippleColor="@color/grey_100" />

            <com.google.android.material.chip.Chip
                android:id="@+id/categoryChip"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layoutDirection="ltr"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:chipBackgroundColor="@color/grey_100"
                app:chipIcon="@drawable/other"
                app:rippleColor="@color/grey_100" />

        </com.google.android.material.chip.ChipGroup>

    </RelativeLayout>


</LinearLayout>