<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl"
    tools:context=".ui.fragments.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/app_bar_background"
            android:paddingStart="12dp"
            android:paddingTop="16dp"
            android:paddingEnd="12dp"
            android:paddingBottom="16dp"
            app:contentInsetStart="0dp"
            app:layout_scrollFlags="scroll|enterAlways">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/cash"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                app:layout_constraintEnd_toStartOf="@+id/imageView"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="۱۲۰،۰۰۰،۰۰۰"
                                android:textColor="@color/white"
                                android:textSize="34sp"
                                android:textStyle="bold"
                                app:layout_constraintEnd_toStartOf="@+id/imageView"
                                app:layout_constraintStart_toStartOf="@+id/textView"
                                app:layout_constraintTop_toBottomOf="@+id/textView" />

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="140dp"
                                android:layout_height="140dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/money_bag" />

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="تومان"
                                android:textColor="@color/white"
                                android:textSize="24sp"
                                app:layout_constraintEnd_toEndOf="@+id/textView6"
                                app:layout_constraintStart_toStartOf="@+id/textView6"
                                app:layout_constraintTop_toBottomOf="@+id/textView6" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@android:color/transparent"
                        app:cardCornerRadius="16dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/yellow_gradient"
                            android:padding="8dp">

                            <TextView
                                android:id="@+id/textView1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/income"
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                app:layout_constraintEnd_toStartOf="@+id/imageView1"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="۱۲۰،۰۰۰"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                app:layout_constraintEnd_toStartOf="@+id/imageView1"
                                app:layout_constraintStart_toStartOf="@+id/textView1"
                                app:layout_constraintTop_toBottomOf="@+id/textView1" />

                            <ImageView
                                android:id="@+id/imageView1"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/income" />

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/toman"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                app:layout_constraintEnd_toEndOf="@+id/textView4"
                                app:layout_constraintStart_toStartOf="@+id/textView4"
                                app:layout_constraintTop_toBottomOf="@+id/textView4" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@android:color/transparent"
                        app:cardCornerRadius="16dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/pink_gradient"
                            android:padding="8dp">

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/expence"
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="۱۲۰،۰۰۰ "
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                                app:layout_constraintStart_toStartOf="@+id/textView2"
                                app:layout_constraintTop_toBottomOf="@+id/textView2" />

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/pay" />

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/toman"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                app:layout_constraintEnd_toEndOf="@+id/textView8"
                                app:layout_constraintStart_toStartOf="@+id/textView8"
                                app:layout_constraintTop_toBottomOf="@+id/textView8" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </com.google.android.material.card.MaterialCardView>
                </TableRow>

            </TableLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transactionRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:listitem="@layout/transaction_item" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>